--- a/config.env.template
+++ b/config.env.template
@@ -1,9 +1,9 @@
 # Change File Name to config.env
 
-API_ID = ""
-API_HASH = ""
-BOT_TOKEN = ""
-TO_CHATS = ""
-FROM_CHATS = ""
+API_ID = "18245561"
+API_HASH = "319e75070515b8093e4c692fa65799e4"
+BOT_TOKEN = "5183283787:AAE-0dTx8GABbfJIefPAPfPCwpyWx8y_7X4"
+TO_CHATS = "1001449010861"
+FROM_CHATS = "1001212434433"
 ADVANCE_CONFIG = ""
 TELEGRAM_SESSION = ""
